# CHAO5-The-Unbalance-Mod-Returns

./: CHAO5.code-workspace  Cargo.toml  README.md  plugin.nro
.github/workflows/: rust_build.yml
CHAO5 GitHub Backup/: config.json  plugin.nro  victory.toml
Old Smashline 1/: Cargo.toml  imports.rs  utils.rs
Old Smashline 1/bayonetta/: frame.rs  game.rs
Old Smashline 1/brave/: effect.rs  frame.rs  game.rs  mod.rs
Old Smashline 1/buddy/: effect.rs  expression.rs  frame.rs  game.rs  sound.rs  status.rs
Old Smashline 1/captain/: frame.rs  game.rs  mod.rs
Old Smashline 1/chrom/: game.rs
Old Smashline 1/claus/: effect.rs  expression.rs  frame.rs  sound.rs
Old Smashline 1/cloud/: effect.rs  mod.rs  status.rs
Old Smashline 1/common/: frame.rs  function.rs  mod.rs  param.rs
Old Smashline 1/daisy/: effect.rs  frame.rs  game.rs  sound.rs
Old Smashline 1/dedede/: frame.rs  game.rs  sound.rs
Old Smashline 1/demon/: frame.rs  game.rs
Old Smashline 1/diddy/: game.rs  mod.rs  sound.rs  status.rs
Old Smashline 1/dolly/: frame.rs
Old Smashline 1/donkey/: effect.rs  game.rs  sound.rs
Old Smashline 1/fox/: mod.rs  (+1 more)
kirby/: game.rs
koopag/: expression.rs  game.rs  mod.rs  status.rs
link/: game.rs
littlemac/: mod.rs
lucas/: frame.rs  game.rs
lucina/: frame.rs  game.rs
luigi/: game.rs
mario/: mod.rs
mariod/: game.rs
master/: game.rs  mod.rs
metaknight/: effect.rs  frame.rs  sound.rs
miifighter/: frame.rs  game.rs  mod.rs
miiswordsman/: game.rs
murabito/: frame.rs
src/: helper.rs  imports.rs  lib.rs  offsets.rs  singletons.rs  utils.rs
(+6013 files in other folders)
